Chapter 3 — Listing 3.7: WithdrawalPolicyWithPrivate.java Demonstrates: private methods in interfaces for encapsulating shared logic